--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
-name: GitHub Actions Demo
+name: GitHub Actions Workflow Demo
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  GitHub-Actions-Job-Demo:
     runs-on: self-hosted
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
