--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,8 +7,10 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-test-deploy:
     runs-on: self-hosted
+    env:
+      WEB_APP: .\src\WebApplication\WebApplication.sln
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
@@ -16,9 +18,9 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ${{ env.WEB_APP }}
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore ${{ env.WEB_APP }}
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal ${{ env.WEB_APP }}
       
