--- a/src/GitHubActionsDemo/WebApplication/Properties/launchSettings.json
+++ b/src/GitHubActionsDemo/WebApplication/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": true,
-    "anonymousAuthentication": false,
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:33878",
-      "sslPort": 44350
+      "applicationUrl": "http://localhost:9896",
+      "sslPort": 44313
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "WebApplication": {
+    "WebApplicationCore": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
