Moved actions/checkout to workflow

--- a/.github/actions/config-dotnet/action.yml
+++ b/.github/actions/config-dotnet/action.yml
@@ -8,13 +8,10 @@ inputs:
 
 runs:
   steps:
-    name: Checkout Repo
-    uses: actions/checkout@v2
-
-    name: Setup .NET
+  - name: Setup .NET
     uses: actions/setup-dotnet@v1
     with:
       dotnet-version: 5.0.x
 
-    name: Restore dependencies
+  - name: Restore dependencies
     run: dotnet restore ${{ inputs.solution-path }}
