--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,8 @@ jobs:
   test:
     runs-on: self-hosted
     steps:
+    - name: Checkout Repo
+      uses: actions/checkout@v2
     - uses: ./.github/actions/config-dotnet
       with:
         solution-path: ${{ env.SOLUTION }}
@@ -25,6 +27,8 @@ jobs:
     env:
       WEB_APP: ./src/GitHubActionsDemo/WebApplication/WebApplication.csproj
     steps:
+    - name: Checkout Repo
+      uses: actions/checkout@v2
     - uses: ./.github/actions/config-dotnet
       with:
         solution-path: ${{ env.SOLUTION }}
