--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v2
-    - uses: ./config-dotnet
+    - uses: ./.github/config-dotnet
       with:
         solution-path: ${{ env.SOLUTION }}
     - name: Test
@@ -29,7 +29,7 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v2
-    - uses: ./config-dotnet
+    - uses: ./.github/config-dotnet
       with:
         solution-path: ${{ env.SOLUTION }}
     - name: Build
